crew and techno desktop breakpoints added

--- a/assets/html/crew-commander.html
+++ b/assets/html/crew-commander.html
@@ -71,37 +71,40 @@
                     <div class="crew-line"></div>
                 </div>
 
-                <ul class="crew-navigation-list">
-                    <li>
-                        <a href="../html/crew-commander.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button crew-active">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-specialist.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-pilot.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-engineer.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                </ul>
+                <div class="crew-navigation-data">
+                    <ul class="crew-navigation-list">
+                        <li>
+                            <a href="../html/crew-commander.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button crew-active">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-specialist.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-pilot.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-engineer.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                    </ul>
 
-                <div class="crew-information">
-                    <p class="crew-profile">Commander</p>
-                    <h3 class="crew-name">Douglas Hurley</h3>
-                    <p class="crew-description">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
-                        and former NASA astronaut. He launched into space for the third time as 
-                        commander of Crew Dragon Demo-2.
-                    </p>
+                    <div class="crew-information">
+                        <p class="crew-profile">Commander</p>
+                        <h3 class="crew-name">Douglas Hurley</h3>
+                        <p class="crew-description">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
+                            and former NASA astronaut. He launched into space for the third time as 
+                            commander of Crew Dragon Demo-2.
+                        </p>
+                    </div>
                 </div>
+                
             </div>
         </section>
     </main>
