--- a/assets/html/crew-engineer.html
+++ b/assets/html/crew-engineer.html
@@ -71,37 +71,40 @@
                     <div class="crew-line"></div>
                 </div>
 
-                <ul class="crew-navigation-list">
-                    <li>
-                        <a href="../html/crew-commander.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-specialist.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-pilot.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-engineer.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button crew-active">
-                        </a>
-                    </li>
-                </ul>
+                <div class="crew-navigation-data">
+                    <ul class="crew-navigation-list">
+                        <li>
+                            <a href="../html/crew-commander.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-specialist.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-pilot.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-engineer.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button crew-active">
+                            </a>
+                        </li>
+                    </ul>
 
-                <div class="crew-information">
-                    <p class="crew-profile">Flight Engineer</p>
-                    <h3 class="crew-name">Anousheh Ansari</h3>
-                    <p class="crew-description">Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems. 
-                        Ansari was the fourth self-funded space tourist, the first self-funded woman to 
-                        fly to the ISS, and the first Iranian in space. 
-                    </p>
+                    <div class="crew-information">
+                        <p class="crew-profile">Flight Engineer</p>
+                        <h3 class="crew-name">Anousheh Ansari</h3>
+                        <p class="crew-description">Anousheh Ansari is an Iranian American engineer and co-founder of Prodea Systems. 
+                            Ansari was the fourth self-funded space tourist, the first self-funded woman to 
+                            fly to the ISS, and the first Iranian in space. 
+                        </p>
+                    </div>
                 </div>
+                
             </div>
         </section>
     </main>
