--- a/assets/html/crew-pilot.html
+++ b/assets/html/crew-pilot.html
@@ -71,38 +71,41 @@
                     <div class="crew-line"></div>
                 </div>
 
-                <ul class="crew-navigation-list">
-                    <li>
-                        <a href="../html/crew-commander.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-specialist.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-pilot.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button crew-active">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-engineer.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                </ul>
+                <div class="crew-navigation-data">
+                    <ul class="crew-navigation-list">
+                        <li>
+                            <a href="../html/crew-commander.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-specialist.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-pilot.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button crew-active">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-engineer.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                    </ul>
 
-                <div class="crew-information">
-                    <p class="crew-profile">Pilot</p>
-                    <h3 class="crew-name">Victor Glover</h3>
-                    <p class="crew-description">Pilot on the first operational flight of the SpaceX Crew Dragon to the 
-                        International Space Station. Glover is a commander in the U.S. Navy where 
-                        he pilots an F/A-18.He was a crew member of Expedition 64, and served as a 
-                        station systems flight engineer.
-                    </p>
+                    <div class="crew-information">
+                        <p class="crew-profile">Pilot</p>
+                        <h3 class="crew-name">Victor Glover</h3>
+                        <p class="crew-description">Pilot on the first operational flight of the SpaceX Crew Dragon to the 
+                            International Space Station. Glover is a commander in the U.S. Navy where 
+                            he pilots an F/A-18.He was a crew member of Expedition 64, and served as a 
+                            station systems flight engineer.
+                        </p>
+                    </div>
                 </div>
+
             </div>
         </section>
     </main>
