--- a/assets/html/crew-specialist.html
+++ b/assets/html/crew-specialist.html
@@ -71,37 +71,40 @@
                     <div class="crew-line"></div>
                 </div>
 
-                <ul class="crew-navigation-list">
-                    <li>
-                        <a href="../html/crew-commander.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-specialist.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button crew-active">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-pilot.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="../html/crew-engineer.html">
-                            <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
-                        </a>
-                    </li>
-                </ul>
+                <div class="crew-navigation-data">
+                    <ul class="crew-navigation-list">
+                        <li>
+                            <a href="../html/crew-commander.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-specialist.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button crew-active">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-pilot.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../html/crew-engineer.html">
+                                <img src="../img/bxs-circle.svg" alt="circle" class="crew-swiper-button">
+                            </a>
+                        </li>
+                    </ul>
 
-                <div class="crew-information">
-                    <p class="crew-profile">Mission Specialist</p>
-                    <h3 class="crew-name">Mark Shuttleworth</h3>
-                    <p class="crew-description">Mark Richard Shuttleworth is the founder and CEO of Canonical, the company behind 
-                        the Linux-based Ubuntu operating system. Shuttleworth became the first South 
-                        African to travel to space as a space tourist.
-                    </p>
+                    <div class="crew-information">
+                        <p class="crew-profile">Mission Specialist</p>
+                        <h3 class="crew-name">Mark Shuttleworth</h3>
+                        <p class="crew-description">Mark Richard Shuttleworth is the founder and CEO of Canonical, the company behind 
+                            the Linux-based Ubuntu operating system. Shuttleworth became the first South 
+                            African to travel to space as a space tourist.
+                        </p>
+                    </div>
                 </div>
+
             </div>
         </section>
     </main>
