--- a/assets/html/technology-spaceport.html
+++ b/assets/html/technology-spaceport.html
@@ -65,22 +65,27 @@
             <h2 class="technology-subheading"><span class="technology-subheading-number">03</span>Space launch 101</h2>
 
             <div class="technology-container">
-                <img src="../img/technology/image-spaceport-landscape.jpg" alt="spaceport" class="technology-img">
+                <picture>
+                    <source media="(min-width: 992px)" srcset="../img/technology/image-spaceport-portrait.jpg">
+                    <img src="../img/technology/image-spaceport-landscape.jpg" alt="spaceport" class="technology-img">
+                </picture>
 
-                <div class="technology-numbers-container">
-                    <a href="../html/technology-vehicle.html" class="technology-numbers-circle">1</a>
-                    <a href="../html/technology-spaceport.html" class="technology-numbers-circle technology-active">2</a>
-                    <a href="../html/technology-capsule.html" class="technology-numbers-circle">3</a>
-                </div>
+                <div class="technology-data-container">
+                    <div class="technology-numbers-container">
+                        <a href="../html/technology-vehicle.html" class="technology-numbers-circle">1</a>
+                        <a href="../html/technology-spaceport.html" class="technology-numbers-circle technology-active">2</a>
+                        <a href="../html/technology-capsule.html" class="technology-numbers-circle">3</a>
+                    </div>
 
-                <div class="technology-info">
-                    <p class="technology-terminology">The terminology...</p>
-                    <h3 class="technology-title">Spaceport</h3>
-                    <p class="technology-description">A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, 
-                        by analogy to the seaport for ships or airport for aircraft. Based in the 
-                        famous Cape Canaveral, our spaceport is ideally situated to take advantage 
-                        of the Earth's rotation for launch.
-                    </p>
+                    <div class="technology-info">
+                        <p class="technology-terminology">The terminology...</p>
+                        <h3 class="technology-title">Spaceport</h3>
+                        <p class="technology-description">A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, 
+                            by analogy to the seaport for ships or airport for aircraft. Based in the 
+                            famous Cape Canaveral, our spaceport is ideally situated to take advantage 
+                            of the Earth's rotation for launch.
+                        </p>
+                    </div>
                 </div>
 
             </div>
