--- a/assets/html/technology-vehicle.html
+++ b/assets/html/technology-vehicle.html
@@ -65,22 +65,27 @@
             <h2 class="technology-subheading"><span class="technology-subheading-number">03</span>Space launch 101</h2>
 
             <div class="technology-container">
-                <img src="../img/technology/image-launch-vehicle-landscape.jpg" alt="launch vehicle" class="technology-img">
+                <picture>
+                    <source media="(min-width: 992px)" srcset="../img/technology/image-launch-vehicle-portrait.jpg">
+                    <img src="../img/technology/image-launch-vehicle-landscape.jpg" alt="launch vehicle" class="technology-img">
+                </picture>
 
-                <div class="technology-numbers-container">
-                    <a href="../html/technology-vehicle.html" class="technology-numbers-circle technology-active">1</a>
-                    <a href="../html/technology-spaceport.html" class="technology-numbers-circle">2</a>
-                    <a href="../html/technology-capsule.html" class="technology-numbers-circle">3</a>
-                </div>
-
-                <div class="technology-info">
-                    <p class="technology-terminology">The terminology...</p>
-                    <h3 class="technology-title">Launch vehicle</h3>
-                    <p class="technology-description">A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
-                        payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
-                        WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
-                        it's quite an awe-inspiring sight on the launch pad!
-                    </p>
+                <div class="technology-data-container">
+                    <div class="technology-numbers-container">
+                        <a href="../html/technology-vehicle.html" class="technology-numbers-circle technology-active">1</a>
+                        <a href="../html/technology-spaceport.html" class="technology-numbers-circle">2</a>
+                        <a href="../html/technology-capsule.html" class="technology-numbers-circle">3</a>
+                    </div>
+    
+                    <div class="technology-info">
+                        <p class="technology-terminology">The terminology...</p>
+                        <h3 class="technology-title">Launch vehicle</h3>
+                        <p class="technology-description">A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
+                            payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
+                            WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
+                            it's quite an awe-inspiring sight on the launch pad!
+                        </p>
+                    </div>
                 </div>
 
             </div>
