--- a/assets/html/technology-capsule.html
+++ b/assets/html/technology-capsule.html
@@ -65,22 +65,27 @@
             <h2 class="technology-subheading"><span class="technology-subheading-number">03</span>Space launch 101</h2>
 
             <div class="technology-container">
-                <img src="../img/technology/image-space-capsule-landscape.jpg" alt="space-capsule" class="technology-img">
+                <picture>
+                    <source media="(min-width: 992px)" srcset="../img/technology/image-space-capsule-portrait.jpg">
+                    <img src="../img/technology/image-space-capsule-landscape.jpg" alt="space-capsule" class="technology-img">
+                </picture>
 
-                <div class="technology-numbers-container">
-                    <a href="../html/technology-vehicle.html" class="technology-numbers-circle">1</a>
-                    <a href="../html/technology-spaceport.html" class="technology-numbers-circle">2</a>
-                    <a href="../html/technology-capsule.html" class="technology-numbers-circle technology-active">3</a>
-                </div>
+                <div class="technology-data-container">
+                    <div class="technology-numbers-container">
+                        <a href="../html/technology-vehicle.html" class="technology-numbers-circle">1</a>
+                        <a href="../html/technology-spaceport.html" class="technology-numbers-circle">2</a>
+                        <a href="../html/technology-capsule.html" class="technology-numbers-circle technology-active">3</a>
+                    </div>
 
-                <div class="technology-info">
-                    <p class="technology-terminology">The terminology...</p>
-                    <h3 class="technology-title">Space capsule</h3>
-                    <p class="technology-description">A space capsule is an often-crewed spacecraft that uses a blunt-body reentry 
-                        capsule to reenter the Earth's atmosphere without wings. Our capsule is where 
-                        you'll spend your time during the flight. It includes a space gym, cinema, 
-                        and plenty of other activities to keep you entertained.
-                    </p>
+                    <div class="technology-info">
+                        <p class="technology-terminology">The terminology...</p>
+                        <h3 class="technology-title">Space capsule</h3>
+                        <p class="technology-description">A space capsule is an often-crewed spacecraft that uses a blunt-body reentry 
+                            capsule to reenter the Earth's atmosphere without wings. Our capsule is where 
+                            you'll spend your time during the flight. It includes a space gym, cinema, 
+                            and plenty of other activities to keep you entertained.
+                        </p>
+                    </div>
                 </div>
 
             </div>
