--- a/assets/html/technology-capsule.html
+++ b/assets/html/technology-capsule.html
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li class="primary-nav-item primary-active">
-                    <a href="../html/technology-vehicle.html" class="primary-nav-link">
+                    <a href="../html/technology-vehicle.html" class="primary-nav-link primary-nav-active">
                         <span aria-hidden="true">03</span>Technology
                     </a>
                 </li>
