--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <nav>
             <ul class="primary-navigation flex" id="primary-navigation" data-visible="false">
                 <li class="primary-nav-item primary-active">
-                    <a href="index.html" class="primary-nav-link">
+                    <a href="index.html" class="primary-nav-link primary-nav-active">
                         <span aria-hidden="true">00</span>Home
                     </a>
                 </li>
