--- a/assets/html/crew-specialist.html
+++ b/assets/html/crew-specialist.html
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li class="primary-nav-item primary-active">
-                    <a href="../html/crew-commander.html" class="primary-nav-link">
+                    <a href="../html/crew-commander.html" class="primary-nav-link primary-nav-active">
                         <span aria-hidden="true">02</span>Crew
                     </a>
                 </li>
