--- a/assets/html/destination-mars.html
+++ b/assets/html/destination-mars.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li class="primary-nav-item primary-active">
-                    <a href="../html/destination-moon.html" class="primary-nav-link">
+                    <a href="../html/destination-moon.html" class="primary-nav-link primary-nav-active">
                         <span aria-hidden="true">01</span>Destination
                     </a>
                 </li>
