--- a/assets/html/crew-engineer.html
+++ b/assets/html/crew-engineer.html
@@ -109,9 +109,11 @@
         </section>
     </main>
 
+    <!--=============== SCROLLREVEAL JS ===============-->
+    <script src="../script/scrollreveal.min.js"></script>
+    <!--=============== MAIN JS ===============-->
+    <script src="../script/main.js"></script>
     <!--=============== NAVBAR JS ===============-->
     <script src="../script/navbar.js"></script>
-    <!--=============== MAIN JS ===============-->
-    <script src="../script/crew.js"></script>
 </body>
 </html>
