--- a/assets/html/technology-vehicle.html
+++ b/assets/html/technology-vehicle.html
@@ -92,7 +92,11 @@
         </section>
     </main>
 
+    <!--=============== SCROLLREVEAL JS ===============-->
+    <script src="../script/scrollreveal.min.js"></script>
     <!--=============== NAVBAR JS ===============-->
     <script src="../script/navbar.js"></script>
+    <!--=============== MAIN JS ===============-->
+    <script src="../script/main.js"></script>
 </body>
 </html>
