--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
             </div>
         </section>
     </main>
+
+    <!--=============== SCROLLREVEAL JS ===============-->
+    <script src="./assets/script/scrollreveal.min.js"></script>
     <!--=============== NAVBAR JS ===============-->
     <script src="./assets/script/navbar.js"></script>
+    <!--=============== MAIN JS ===============-->
+    <script src="./assets/script/main.js"></script>
 </body>
 </html>
